# pawalogs

./: .gitignore  Makefile  README.md  pyproject.toml
src/pawalogs/: __init__.py  utils.py
src/pawalogs/commands/: __init__.py  db_schema_inspector.py  field_analyzer.py  table_counts.py
