[project]
name = "pawalogs"
version = "0.1.0"
description = "A collection of utility scripts for macOS powerlogs"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "ruff==0.14.2",
]

[project.scripts]
pawalogs-db-inspector = "pawalogs.commands.db_schema_inspector:main"
pawalogs-table-counts = "pawalogs.commands.table_counts:main"
pawalogs-field-analyzer = "pawalogs.commands.field_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pawalogs"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
